--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: MLKAX # the main title
 
-tagline: Hi! Im a college student that love drawing things. # it will display as the subtitle
+tagline: Hi! Im a college student that love drawing things. Im currently open for commission! # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -34,7 +34,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: MLKAX/littledeviela
   email: aevururyn@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
