--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: JIJAH # the main title
 
-tagline: Hi! Im a college student that love drawing things. # it will display as the subtitle
+tagline: My name: Azizah Nurul Izzah, my NIM: H071241029. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -35,7 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Azizah Nurul Izzah
-  email: aevururyn@gmail.com # change to your email address
+  email: nurulazizzaah@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/littledeviela # change to your Twitter homepage
